@@ -3,6 +3,7 @@ commit messages and/or the pull requests.
 
 OCMock 3.0.M3 (2014-05-31)
 
+* Changed license to Apache 2 license
 * Added support for verify-after-run for class methods and for methods sent 
   directly to the real object covered by a partial mock.
 * Using a temporary meta class subclass for mocking class methods, enabling
@@ -10,7 +11,8 @@ OCMock 3.0.M3 (2014-05-31)
   longer mocked in all subclasses. 
 * Throwing descriptive exception when attempting to create partial mock on
   toll-free bridged classes and tagged pointers (Mark Larsen)	
-* Changed license to Apache 2 license
+* Allowing nil as block in stub action. With partial mocks this makes it 
+  possible to overwrite a method to do nothing (Sam Stigler) 
 
 
 OCMock 3.0.M2 (2014-05-07)
